# direct-indexing

./: .env.example  .gitignore  README.md  TODO.md  VTI.txt  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
data/: SPY_constituents.yaml
data/qqq/: weights_corrected.json
data/sp500/: sectors.json  weights.json  weights_503.json  weights_503_corrected.json  weights_ivv.json
scripts/: validate_config.py
scripts/portfolios/: manage_portfolio.py  setup_cron.py
src/direct_indexing/: __init__.py  alpaca_client.py  cli.py  config.py  direct_indexer.py  lot_tracker.py  models.py  optimizer_tlh.py  portfolio.py  portfolio_manager.py  sp500.py  substitute_finder.py  swap_executor.py  tlh.py
src/direct_indexing/backtest/: __init__.py  backtest_engine.py  cap_weighted.py  data.py  engine.py  pure_direct.py
src/direct_indexing/optimizer/: __init__.py  decision_vars.py  oracle.py  solver.py  strategy.py
src/direct_indexing/optimizer/constraints/: __init__.py  wash_sale.py  weight.py
src/direct_indexing/optimizer/objectives/: __init__.py  drift.py  tax.py  transaction.py
tests/: conftest.py  test_alpaca_client.py  test_config.py  test_constituents.py  test_lot_tracker.py  test_portfolio.py  test_portfolio_manager.py  test_swap_executor.py  test_tlh.py
tests/test_backtest/: test_data.py
