[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "direct-indexing"
version = "1.0.0"
description = "ETF replication with automated tax-loss harvesting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Smit Patel", email = "smitpatel316@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["tax-loss-harvesting", "direct-indexing", "alpaca", "etf", "investment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
dashboard = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.30.0",
]

[project.scripts]
direct-indexing = "direct_indexing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true